tests/last_duplicate_property_wins/last_duplicate_property_wins.exp
Error ----------------------------------------------------------------------------------------------------- test.js:11:3

Cannot shadow proto property `bar` [1] because string [2] is incompatible with function [3]. [incompatible-type]

   test.js:11:3
   11|   bar: string; // error: can't shadow proto with incompatible own
         ^^^

References:
   test.js:10:3
   10|   bar(): number { return 0; }
         ^^^ [1]
   test.js:11:8
   11|   bar: string; // error: can't shadow proto with incompatible own
              ^^^^^^ [2]
   test.js:10:3
   10|   bar(): number { return 0; }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:12:3

Cannot shadow proto property `qux` [1] because number [2] is incompatible with function [3]. [incompatible-type]

   test.js:12:3
   12|   qux: number; // error: can't shadow proto with incompatible own
         ^^^

References:
   test.js:13:3
   13|   qux(): string { return "hello" }
         ^^^ [1]
   test.js:12:8
   12|   qux: number; // error: can't shadow proto with incompatible own
              ^^^^^^ [2]
   test.js:13:3
   13|   qux(): string { return "hello" }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:18:2

Cannot cast `(new C).foo()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:18:2
   18| ((new C).foo(): boolean); // last wins
        ^^^^^^^^^^^^^

References:
   test.js:7:10
    7|   foo(): string { return "hello" } // last wins
                ^^^^^^ [1]
   test.js:18:17
   18| ((new C).foo(): boolean); // last wins
                       ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:2

Cannot cast `(new C).x` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:19:2
   19| ((new C).x: boolean); // last wins
        ^^^^^^^^^

References:
   test.js:9:6
    9|   x: string; // last wins
            ^^^^^^ [1]
   test.js:19:13
   19| ((new C).x: boolean); // last wins
                   ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:2

Cannot cast `(new C).bar` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:20:2
   20| ((new C).bar: empty); // error: string ~> empty (own prop wins)
        ^^^^^^^^^^^

References:
   test.js:11:8
   11|   bar: string; // error: can't shadow proto with incompatible own
              ^^^^^^ [1]
   test.js:20:15
   20| ((new C).bar: empty); // error: string ~> empty (own prop wins)
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:2

Cannot cast `(new C).qux` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:21:2
   21| ((new C).qux: empty); // error: number ~> empty (own prop wins)
        ^^^^^^^^^^^

References:
   test.js:12:8
   12|   qux: number; // error: can't shadow proto with incompatible own
              ^^^^^^ [1]
   test.js:21:15
   21| ((new C).qux: empty); // error: number ~> empty (own prop wins)
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:38:2

Cannot cast `o.foo()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:38:2
   38| (o.foo(): boolean); // last wins
        ^^^^^^^

References:
   test.js:27:10
   27|   foo(): string { return "hello" }, // last wins
                ^^^^^^ [1]
   test.js:38:11
   38| (o.foo(): boolean); // last wins
                 ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:2

Cannot cast `o.x` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:39:2
   39| (o.x: boolean); // last wins
        ^^^

References:
   test.js:29:6
   29|   x: "hello", // last wins
            ^^^^^^^ [1]
   test.js:39:7
   39| (o.x: boolean); // last wins
             ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:40:2

Cannot cast `o.bar` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:40:2
   40| (o.bar: boolean); // last wins
        ^^^^^

References:
   test.js:31:8
   31|   bar: "hello", // last wins
              ^^^^^^^ [1]
   test.js:40:9
   40| (o.bar: boolean); // last wins
               ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:41:2

Cannot cast `o.qux()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:41:2
   41| (o.qux(): boolean); // last wins
        ^^^^^^^

References:
   test.js:33:10
   33|   qux(): string { return "hello" }, // last wins
                ^^^^^^ [1]
   test.js:41:11
   41| (o.qux(): boolean); // last wins
                 ^^^^^^^ [2]



Found 10 errors
